# LeadFinding

./: .gitignore
leadbot/: README.md
leadbot/docs/: 00_PROJECT_OVERVIEW.md  01_SYSTEM_ARCHITECTURE.md  02_DATABASE_SCHEMA.md  03_PIPELINE_AND_SCORING.md  04_AGENT_TASKS.md  05_CODING_GUIDELINES.md
leadbot/frontend/: .env.local.example  README.md  package-lock.json  package.json
leadbot/frontend/app/: actions.ts  globals.css  layout.tsx  page.tsx
leadbot/frontend/lib/: db.ts  leadbot.ts
leadbot/supabase/migrations/: 001_initial_schema.sql  002_harden_rls_and_indexes.sql  20260529230008_harden_rls_and_indexes.sql  20260530034137_revoke_data_api_table_grants.sql
leadbot/worker/: README.md  pyproject.toml
leadbot/worker/leadbot_worker/: main.py  worker.py
leadbot/worker/leadbot_worker/db/: __init__.py  connection.py  queries.py
leadbot/worker/leadbot_worker/models/: __init__.py  lead.py  raw_record.py  score.py
leadbot/worker/leadbot_worker/parsers/: common.py  thumbtack.py  yelp.py
leadbot/worker/leadbot_worker/pipeline/: __init__.py  collect_urls.py  dedupe.py  normalize.py  parse_records.py  run_job.py  score.py  website_presence.py
leadbot/worker/leadbot_worker/sources/: __init__.py  config.py
leadbot/worker/tests/: test_collect_urls.py  test_dedupe.py  test_normalize.py  test_parsers.py  test_queries.py  test_run_job.py  test_score.py  test_website_presence.py  test_worker.py
leadbot/worker/tests/fixtures/: thumbtack_profile.html  yelp_profile.html
leadbot_agent_docs/: 03_PIPELINE_AND_SCORING.md  05_CODING_GUIDELINES.md
(+2 files in other folders)
